# vexillo

./: Cargo.toml  README.md  build_lib_doc.py  build_readme.py
crates/vexcore/: Cargo.toml
crates/vexcore/src/: bitmask.rs  const_block.rs  dep_graph.rs  flag_group.rs  flags_input.rs  impl_block.rs  lib.rs  override_block.rs  type_decl.rs  type_def.rs  vis.rs
crates/vexmacro/: Cargo.toml
crates/vexmacro/src/: lib.rs
crates/vexproc/: Cargo.toml
crates/vexproc/src/: lib.rs
src/: internal.rs  lib.rs  shared.rs
src/flags/: impl_block.rs  mod.rs  type_decl.rs  vis.rs
tests/: flags_test.rs
