[package]
name = "vexillo"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["crates/*"]

[workspace.dependencies]
# Internal
vexcore = { path = "crates/vexcore" }
vexmacro = { path = "crates/vexmacro" }
# External
paste = "1.0.15"
proc-macro2 = "1.0.101"
quote = "1.0.41"
syn = { version = "2.0.106", features = ["full", "visit-mut"] }

[dependencies]
# Internal
vexcore.workspace = true
vexmacro.workspace = true
# External
paste.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

[lib]
proc-macro = true
