[package]
name = "vexillo"
description = "A bit flags macro."
authors = ["Ada F. <https://github.com/ErisianArchitect>"]
repository = "https://github.com/ErisianArchitect/vexillo"
docs = "https://docs.rs/vexillo"
license = "MIT"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.dependencies]
# Internal
vexcore = { path = "./crates/vexcore", version = "0.1.0" }
vexmacro = { path = "./crates/vexmacro", version = "0.1.0" }
vexproc = { path = "./crates/vexproc", version = "0.1.0" }
# External
paste = "1.0.15"
proc-macro2 = "1.0.106"
quote = "1.0.45"
syn = { version = "2.0.117", features = ["full", "visit-mut"] }

[dependencies]
# Internal
vexcore.workspace = true
vexmacro.workspace = true
vexproc.workspace = true
# External
paste.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
