
[package]
name = "vexcore"
authors = ["Ada F. <https://github.com/ErisianArchitect>"]
description = "Core library for vexillo."
repository = "https://github.com/ErisianArchitect/vexillo"
documentation = "https://docs.rs/vexcore"
license = "MIT"
version = "0.1.1"
edition = "2024"

[dependencies]
# Internal
vexmacro.workspace = true
# External
paste.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
