
[package]
name = "vexmacro"
description = "Declarative macros dependency for vexillo and vexcore."
authors = ["Ada F. <https://github.com/ErisianArchitect>"]
repository = "https://github.com/ErisianArchitect/vexillo"
documentation = "https://docs.rs/vexmacro"
license = "MIT"
version = "0.1.1"
edition = "2024"
