
[package]
name = "vexproc"
description = "Procedural macros dependency for vexillo and vexcore."
authors = ["Ada F. <https://github.com/ErisianArchitect>"]
repository = "https://github.com/ErisianArchitect/vexillo"
documentation = "https://docs.rs/vexproc"
license = "MIT"
version = "0.1.1"
edition = "2024"

[dependencies]
# Internal
vexcore.workspace = true
vexmacro.workspace = true
# External
paste.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

[lib]
proc-macro = true
